apps/graylog/templates/syslog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  graylog-syslog
  namespace: graylog-syslog
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    hajimari.io/appName: graylog-syslog
    hajimari.io/icon: multimedia
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - graylog-syslog.tribz.cloud
      secretName: graylog-syslog-tls-certificate
  rules:
    - host: graylog-syslog.tribz.cloud
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: graylog-syslog-tcp
                port:
                  number: 514
